--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ドキュメントのタイトル</title>
+    <link rel="stylesheet" href="wakizaka.css">
+</head>
+<body>
 
+    <header>
+        <h1>ウェブサイトのメインタイトル</h1>
+    </header>
+
+    <main>
+        <p>ここに主要なコンテンツが入ります。</p>
+    </main>
+
+    <footer>
+        <small>&copy; 2025 Your Website Name</small>
+    </footer>
+
+</body>
+</html>
