--- a/index.html
+++ b/index.html
@@ -13,7 +13,32 @@
     </header>
 
     <main>
-        <p>二十八家いわせがおいしい</p>
+        <p>もちろんです！以下の紹介文をコピーペーストしてお使いください。
+
+---
+
+🍜 二九八家 いわせのご紹介： 背脂濃厚！角煮が主役の一杯 👑
+
+千葉県市川市で長年愛される人気ラーメン店、それが**「二九八家（ふくわうち）いわせ」**です。
+
+長年の経験と名店「麺屋武蔵」で培った技術が融合した、唯一無二のラーメンを提供しています。
+
+### 🔥 味わいの特徴
+
+* **唯一無二のスープ:** 豚骨醤油をベースに、たっぷりの背脂を浮かべた濃厚なスープ。見た目のパンチとは裏腹に、背脂の甘みが全体をまろやかにまとめ上げ、最後まで飲み干せる中毒性があります。
+* **もっちり麺:** スープによく絡む、中太の縮れ麺を使用。コシともちっとした食感が、濃厚スープとの相性を完璧にしています。
+
+### 🥩 主役は「角煮」
+
+このお店の最大の魅力は、チャーシューの代わりにトッピングされる**極厚の「角煮」**です。
+
+箸で簡単にほぐれるほどトロトロに煮込まれた角煮は、口の中でとろけるような食感。濃厚なスープとともに、この角煮の旨みが口いっぱいに広がります。
+
+### 💖 店名に込められた想い
+
+「二九八家（ふくわうち）」という店名は、「福は内」に通じ、お客様を福の神に見立てておもてなしをしたいという店主の温かい想いが込められています。
+
+濃厚な背脂醤油とトロトロの角煮が織りなす極上の一杯を、ぜひご賞味ください</p>
     </main>
 
     <footer>
