Update ramen shop description in index.html
Removed placeholder text and added a description for a ramen shop.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
     </header>
 
     <main>
-        <p>もちろんです！以下の紹介文をコピーペーストしてお使いください。
-
----
-
-🍜 二九八家 いわせのご紹介： 背脂濃厚！角煮が主役の一杯 👑
+        <p>🍜 二九八家 いわせのご紹介： 背脂濃厚！角煮が主役の一杯 👑
 
 千葉県市川市で長年愛される人気ラーメン店、それが**「二九八家（ふくわうち）いわせ」**です。
 
