Revise restaurant introduction in index.html形だけ
Updated the introduction to the restaurant and added a subtitle.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <header>
         <h1>私の市川市紹介へようこそ</h1>
     </header>
-
+<h2>二九八家 いわせのご紹介： 背脂濃厚！角煮が主役の一杯</h2>
     <main>
-        <p>🍜 二九八家 いわせのご紹介： 背脂濃厚！角煮が主役の一杯 👑
-
-千葉県市川市で長年愛される人気ラーメン店、それが**「二九八家（ふくわうち）いわせ」**です。
+        <p>千葉県市川市で長年愛される人気ラーメン店、それが**「二九八家（ふくわうち）いわせ」**です。
 
 長年の経験と名店「麺屋武蔵」で培った技術が融合した、唯一無二のラーメンを提供しています。
 
