Add hero section with today's special menu

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <footer>
         <small>&copy; 2025 Your Website Name</small>
     </footer>
-
+<div class="hero">
+    <h2>本日の特選メニュー</h2>
+</div>
 </body>
 </html>
