Change menu title and add dish description
Updated the menu title and added a description for the recommended dish.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <small>&copy; 2025 Your Website Name</small>
     </footer>
 <div class="hero">
-    <h2>本日の特選メニュー</h2>
+    <h2>おすすめメニュー</h2>
+    <p>二十八九家ラーメンです。バランスがとれていておいしい、特にネギがすごくおいしい</p>
 </div>
 </body>
 </html>
